# FOTA-Rust-Server

./: .env.example  .gitignore  Cargo.toml  README.md
Design/: Database-design.md  create_schema.sql
migrations/: 20250421162218_create_initial_schema.sql  20250421190825_change_last_seen_to_timestamptz.sql  20250422150224_create_device_status_logs.sql
src/: app.rs  config.rs  db.rs  error.rs  main.rs  utils.rs
src/models/: device.rs  firmware.rs  mod.rs  status_log.rs  update.rs
src/mqtt/: mod.rs  mqtt_client.rs  topics.rs
src/repository/: device_repo.rs  device_status_repo.rs  firmware_repo.rs  mod.rs  update_repo.rs
src/routes/: device_status.rs  devices.rs  firmwares.rs  mod.rs  updates.rs
